--- a/src/index.css
+++ b/src/index.css
@@ -107,11 +107,45 @@ input:focus, select:focus {
 }
 
 /* Resultado */
-.result {
+/* .result {
   font-weight: bold;
   text-align: center;
   font-size: 1.1rem;
   color: #1f2937;
+} */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+
+.modal-content {
+  background: white;
+  padding: 30px;
+  border-radius: 12px;
+  width: 90%;
+  max-width: 400px;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.modal-button {
+  padding: 10px;
+  border-radius: 6px;
+  border: none;
+  cursor: pointer;
+  font-weight: bold;
+  background: black;
+  color: white;
 }
 
 /* Footer */
@@ -124,23 +158,43 @@ input:focus, select:focus {
 }
 
 /* Botão principal */
-.btn-primary {
+/*.btn-primary {
   display: inline-block;
   padding: 12px 20px;
   border-radius: 12px; /* cantos arredondados */
-  background: #4f46e5;
+ /*  background: #4f46e5;
   color: white;
   font-size: 1rem;
   font-weight: 500;
   text-decoration: none;
   text-align: center;
   transition: background 0.2s ease, transform 0.2s ease;
-}
+} */
 
 .btn-primary:hover {
   background: #3730a3;
   transform: translateY(-2px);
-}
+} 
+
+ 
+
+buttonNormal: {
+  backgroundColor: "#ffffff",
+  color: "#000000",
+  cursor: "pointer",
+},
+
+buttonHover: {
+  backgroundColor: "#e5e5e5",
+  transform: "scale(1.03)",
+},
+
+buttonDisabled: {
+  backgroundColor: "#999999",
+  color: "#555555",
+  cursor: "not-allowed",
+  opacity: 0.7,
+},
 
 /* Responsivo */
 @media (max-width: 480px) {
